fix: lettre spacing for title

--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ img{
     line-height: 1.11;
     text-transform: uppercase;
     color: var(--dark-red);
+    letter-spacing: 17px;
 }
 
 .hero__title span{
@@ -81,6 +82,7 @@ img{
 @media (max-width:1000px){
     .hero__title{
         font-size: 40px;
+        letter-spacing: 10px;
     }
 }
 
